# gl-particle-life

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
lib/glad/include/glad/: gl.h
src/: error.h  group.c  group.h  main.c  simulation.c  simulation.h  utils.h
src/gl/: gl.c  gl.h  glh.h  shader.c  shader.h  types.h
src/shader/: shader.comp
src/shader/2d/: shader.vert
src/shader/3d/: shader.comp  shader.frag  shader.vert
src/simulation/: error.h  group.c  group.h  simulation.c  simulation.h
src/simulation/shader/: shader.comp  shader.vert
